--- a/Color.csproj
+++ b/Color.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Hardcodet.Wpf.TaskbarNotification, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Hardcodet.NotifyIcon.Wpf.1.0.5\lib\net451\Hardcodet.Wpf.TaskbarNotification.dll</HintPath>
+      <HintPath>..\..\packages\Hardcodet.NotifyIcon.Wpf.1.0.6\lib\net451\Hardcodet.Wpf.TaskbarNotification.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\Microsoft.Expression.Interactions.dll</HintPath>
@@ -113,25 +113,22 @@
     <Resource Include="Logo.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Layouts\Default.xml" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\Logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Splash.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core.Color\Core.Color.csproj">
-      <Project>{0a10dbf5-715f-448d-b95f-8c8d7d521e66}</Project>
+    <ProjectReference Include="..\..\Core.Color\Core.Color.csproj">
+      <Project>{64f25c5a-5123-4e9c-b983-bde458d3b171}</Project>
       <Name>Core.Color</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Core.WPF\Core.WPF\Core.WPF.csproj">
+    <ProjectReference Include="..\..\Core.WPF\Core.WPF\Core.WPF.csproj">
       <Project>{6bd41976-f6f8-461f-a071-fabc002761c9}</Project>
       <Name>Core.WPF</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <Project>{e27b497d-657b-45dc-af52-152089011cf3}</Project>
+    <ProjectReference Include="..\..\Core\Core.csproj">
+      <Project>{05ea617a-7c26-4699-b41c-1568aabea31a}</Project>
       <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
