--- a/packages.config
+++ b/packages.config
@@ -3,5 +3,7 @@
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.6" targetFramework="net48" />
   <package id="Hardcodet.Wpf.TaskbarNotification" version="1.0.5" targetFramework="net48" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net48" />
-  <package id="XAMLMarkupExtensions" version="1.2.2" targetFramework="net48" />
+  <package id="WpfAnimatedGif" version="2.0.2" targetFramework="net48" />
+  <package id="WPFLocalizeExtension" version="3.9.4" targetFramework="net48" />
+  <package id="XAMLMarkupExtensions" version="2.1.3" targetFramework="net48" />
 </packages>
